--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ body{
     display: flex;
     align-items: center;
     padding-left: 1rem;
+    
+}
+
+.cellprop-actions-cont > * :hover{
+    cursor:pointer;
 }
 
 .cellprop-actions-cont > * {
@@ -72,6 +77,7 @@ body{
 
 .address-bar{
     width: 5rem;
+    text-align: center;
 }
 
 .formula-bar{
@@ -80,6 +86,9 @@ body{
 
 .grid-cont{
     height: calc( 100vh - 3rem - 2rem - 3rem - 3rem );
+    position: relative;
+    overflow: scroll;
+    background-color: #ecf0f1;
 }
 
 .sheet-actions-cont{
@@ -118,5 +127,89 @@ body{
     text-decoration-thickness:3px;
     font-size: 0.9rem;
 }
+
+.top-left-dummy{
+    height: 2rem;
+    width: 2rem;
+    background-color: #747d8c;
+    position: fixed;
+    z-index: 5;
+    
+}
+
+.address-col-cont{
+    /* height: 10rem;
+    width: 2rem; */
+    position: sticky;
+    top: 2rem;
+    left: 0%;
+    /* background-color: lightblue; */
+}
+
+.address-row-cont{
+    /* height: 2rem; */
+    /* background-color: lightpink; */
+    display: flex;
+    position: sticky;
+    top: 0;
+    left: 2rem;
+    
+    
+}
+
+.cells-cont{
+    position: absolute;
+    top: 0;
+    left: 2rem;
+    /* background-color: lightsalmon; */
+    /* width: 10rem;
+    height: 10rem; */
+}
+
+.address-col{
+    height: 2rem;
+    width: 2rem;
+    text-align: center;
+    border: 1px solid #dfe4ea;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.address-row{
+    height: 2rem;
+    width: 5rem;
+    border: 1px solid #dfe4ea;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.row-cont{
+    display: flex;
+}
+
+.cell{
+    height: 2rem;
+    width: 5rem;
+    /* background-color: #218c74; */
+    border: 1px solid #dfe4ea;
+    outline: none;
+}
+
+.color-prop{
+    position: relative;
+}
+
+.color-prop > input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+
+
 
 
